--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 .svn/
 migrate_working_dir/
 
+.env
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -41,3 +43,5 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
